crates/forge/tests/e2e/snapshots/optimize_inlining/main__e2e__optimize_inlining__optimize_inlining_updates_manifest@2.19.1.snap
---
source: crates/forge/tests/e2e/optimize_inlining.rs
expression: graph_bytes
extension: png
snapshot_kind: binary
---
