crates/forge/tests/e2e/snapshots/optimize_inlining/main__e2e__optimize_inlining__snap_optimize_inlining_dry_run@2.15.2.snap
---
source: crates/forge/tests/e2e/optimize_inlining.rs
expression: stdout
---
Starting inlining strategy optimization...
Search range: 0 to 100, step: 50, max contract size: 4089446 bytes, max felts: 81920


[1/3] Testing threshold 0...



[PASS] simple_package_integrationtest::contract::call_and_invoke (l1_gas: ~0, l1_data_gas: ~192, l2_gas: ~547950)


  ✓ Tests passed, gas: 547950, max contract size: 52390 bytes, contract bytecode L2 gas: 49725440

[2/3] Testing threshold 50...



[PASS] simple_package_integrationtest::contract::call_and_invoke (l1_gas: ~0, l1_data_gas: ~192, l2_gas: ~514510)


  ✓ Tests passed, gas: 514510, max contract size: 21760 bytes, contract bytecode L2 gas: 27033600

[3/3] Testing threshold 100...



[PASS] simple_package_integrationtest::contract::call_and_invoke (l1_gas: ~0, l1_data_gas: ~192, l2_gas: ~513510)


  ✓ Tests passed, gas: 513510, max contract size: 19732 bytes, contract bytecode L2 gas: 25559040

Optimization Results:
╭───────────┬───────────┬───────────────┬──────────────────────────┬────────╮
│ Threshold ┆ Total Gas ┆ Contract Size ┆ Contract Bytecode L2 Gas ┆ Status │
╞═══════════╪═══════════╪═══════════════╪══════════════════════════╪════════╡
│ 0         ┆ 547950    ┆ 52390         ┆ 49725440                 ┆ ✓      │
├╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ 50        ┆ 514510    ┆ 21760         ┆ 27033600                 ┆ ✓      │
├╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ 100       ┆ 513510    ┆ 19732         ┆ 25559040                 ┆ ✓      │
╰───────────┴───────────┴───────────────┴──────────────────────────┴────────╯

Lowest runtime gas cost: threshold=100, gas=513510, contract bytecode L2 gas=25559040
Lowest contract size cost: threshold=100, gas=513510, contract bytecode L2 gas=25559040

Graph saved to: [..]
Scarb.toml not modified. Use --gas or --size to apply a threshold.
