crates/forge/tests/e2e/snapshots/optimize_inlining/main__e2e__optimize_inlining__snap_optimize_inlining_dry_run@2.17.0.snap
---
source: crates/forge/tests/e2e/optimize_inlining.rs
expression: stdout
---
Starting inlining strategy optimization...
Search range: 0 to 100, step: 50, max contract size: 4089446 bytes, max felts: 81920


[1/3] Testing threshold 0...



[PASS] simple_package_integrationtest::contract::call_and_invoke (l1_gas: ~0, l1_data_gas: ~192, l2_gas: ~1042130)


  ✓ Tests passed, gas: 1042130, max contract size: 52391 bytes, contract bytecode L2 gas: 49725440

[2/3] Testing threshold 50...



[PASS] simple_package_integrationtest::contract::call_and_invoke (l1_gas: ~0, l1_data_gas: ~192, l2_gas: ~1008690)


  ✓ Tests passed, gas: 1008690, max contract size: 21761 bytes, contract bytecode L2 gas: 27033600

[3/3] Testing threshold 100...



[PASS] simple_package_integrationtest::contract::call_and_invoke (l1_gas: ~0, l1_data_gas: ~192, l2_gas: ~1007690)


  ✓ Tests passed, gas: 1007690, max contract size: 19733 bytes, contract bytecode L2 gas: 25559040

Optimization Results:
╭───────────┬───────────┬───────────────┬──────────────────────────┬────────╮
│ Threshold ┆ Total Gas ┆ Contract Size ┆ Contract Bytecode L2 Gas ┆ Status │
╞═══════════╪═══════════╪═══════════════╪══════════════════════════╪════════╡
│ 0         ┆ 1042130   ┆ 52391         ┆ 49725440                 ┆ ✓      │
├╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ 50        ┆ 1008690   ┆ 21761         ┆ 27033600                 ┆ ✓      │
├╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ 100       ┆ 1007690   ┆ 19733         ┆ 25559040                 ┆ ✓      │
╰───────────┴───────────┴───────────────┴──────────────────────────┴────────╯

Lowest runtime gas cost: threshold=100, gas=1007690, contract bytecode L2 gas=25559040
Lowest contract size cost: threshold=100, gas=1007690, contract bytecode L2 gas=25559040

Graph saved to: [..]
Scarb.toml not modified. Use --gas or --size to apply a threshold.
