crates/forge/tests/e2e/snapshots/optimize_inlining/main__e2e__optimize_inlining__snap_optimize_inlining_updates_manifest@2.15.2.snap
---
source: crates/forge/tests/e2e/optimize_inlining.rs
expression: stdout
---
Starting inlining strategy optimization...
Search range: 0 to 10, step: 10, max contract size: 4089446 bytes, max felts: 81920


[1/2] Testing threshold 0...



[PASS] simple_package_integrationtest::contract::call_and_invoke (l1_gas: ~0, l1_data_gas: ~192, l2_gas: ~1009130)


  ✓ Tests passed, gas: 1009130, max contract size: 52390 bytes, contract bytecode L2 gas: 49725440

[2/2] Testing threshold 10...



[PASS] simple_package_integrationtest::contract::call_and_invoke (l1_gas: ~0, l1_data_gas: ~192, l2_gas: ~984990)


  ✓ Tests passed, gas: 984990, max contract size: 29545 bytes, contract bytecode L2 gas: 34897920

Optimization Results:
╭───────────┬───────────┬───────────────┬──────────────────────────┬────────╮
│ Threshold ┆ Total Gas ┆ Contract Size ┆ Contract Bytecode L2 Gas ┆ Status │
╞═══════════╪═══════════╪═══════════════╪══════════════════════════╪════════╡
│ 0         ┆ 1009130   ┆ 52390         ┆ 49725440                 ┆ ✓      │
├╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┤
│ 10        ┆ 984990    ┆ 29545         ┆ 34897920                 ┆ ✓      │
╰───────────┴───────────┴───────────────┴──────────────────────────┴────────╯

Lowest runtime gas cost: threshold=10, gas=984990, contract bytecode L2 gas=34897920
Lowest contract size cost: threshold=10, gas=984990, contract bytecode L2 gas=34897920

Graph saved to: /private/var/folders/ws/4q3yrhx10ml3347dldtgl3x40000gn/T/.tmp32hv9v/target/.tmp32hv9v_optimization_results_l_0_h_10_s_10.png
Updated Scarb.toml with inlining-strategy = 10
